# inverse-conway

./: Cargo.toml  LICENSE-APACHE-2.txt  README.md
src/: lib.rs
tests/: forward.rs
